--- a/sigym4-geometry-persistent.cabal
+++ b/sigym4-geometry-persistent.cabal
@@ -26,5 +26,6 @@ library
                      , base16-bytestring >=0.1 && <0.2
                      , sigym4-geometry >=0.2 && <0.3
                      , binary >=0.7 && <0.8
+                     , esqueleto
   -- hs-source-dirs:      
   default-language:    Haskell2010
