--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update
  - sudo apt-get install cabal-install-1.20 ghc-$GHCVER
- - sudo apt-get install postgresql-9.1-postgis postgresql-server-dev-9.1 postgresql-client-9.1
+ - sudo apt-get install postgis postgresql-server-dev-9.1 postgresql-client-9.1
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
  - export CABAL=cabal-1.20
  - export POSTGIS_SQL_PATH=/usr/share/postgresql/9.1/contrib/postgis-1.5
