--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,12 @@ before_install:
  - sudo apt-get install postgresql-9.1-postgis postgresql-9.1 postgresql-server-dev-9.1 postgresql-client-9.1
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
  - export CABAL=cabal-1.20
- - export POSTGIS_SQL_PATH=/usr/share/postgresql/9.1/contrib/postgis-1.5
  - sudo -u postgres createuser -D -R -S test
  - sudo -u postgres psql -d template1 -c "ALTER USER test WITH PASSWORD 'test';"
  - sudo -u postgres createdb -E UTF8 -O test -T template0 test
  - sudo -u postgres psql -d test -c "CREATE EXTENSION postgis;"
+ - sudo -u postgres psql -d test -c "GRANT ALL ON geometry_columns TO PUBLIC;"
+ - sudo -u postgres psql -d test -c "GRANT ALL ON spatial_ref_sys TO PUBLIC;"
 
 install:
  - $CABAL update
