setting meteogrid fork of persistent as submodule until patch for postgis2 oid gets accepted upstream

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/meteogrid/sigym4-geometry
 [submodule "persistent"]
 	path = persistent
-	url = https://github.com/yesodweb/persistent
+	url = https://github.com/meteogrid/persistent
