setup travis and more tests

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "persistent"]
 	path = persistent
 	url = https://github.com/meteogrid/persistent
+[submodule "esqueleto"]
+	path = esqueleto
+	url = https://github.com/meteogrid/esqueleto.git
