--- a/sigym4-geometry-persistent.cabal
+++ b/sigym4-geometry-persistent.cabal
@@ -2,7 +2,7 @@
 -- further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                sigym4-geometry-persistent
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            Interoperatibility with postgis geometry columns for persistent-postgresql
 -- description:         
 homepage:            https://github.com/meteogrid/sigym4-geometry-persistent
@@ -24,7 +24,7 @@ library
                      , persistent >=2.1 && <2.2
                      , persistent-postgresql >=2.1.0.1 && <2.2
                      , base16-bytestring >=0.1 && <0.2
-                     , sigym4-geometry >=0.2.1 && <0.3
+                     , sigym4-geometry >=0.3
                      , binary >=0.7 && <0.8
                      , esqueleto
   -- hs-source-dirs:      
